--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>Boilermaker</title>
     <link rel="stylesheet" href="/style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Yanone+Kaffeesatz:wght@200&display=swap" rel="stylesheet">
     <script defer src="/bundle.js"></script>
   </head>
   <body>
